# r7-desktop-selenium

./: .gitignore  README.md  TestCase.py  conftest.old  conftest.py  pyproject.toml  repor.html  requirements.txt  run_tests.py  test_remote.py
configs/: config.py
editors/: base_editor.py  document_editor.py  presentation_editor.py  spreadsheet_editor.py
resources/: case_names.py
resources/document/: ExpectedImagesLinux.py  ExpectedImagesMac.py  ExpectedImagesWindows.py  __init__.py
resources/presentation/: ExpectedImagesLinux.py  ExpectedImagesMac.py  ExpectedImagesWindows.py  __init__.py
resources/spreadsheet/: ExpectedImagesLinux.py  ExpectedImagesMac.py  ExpectedImagesWindows.py  __init__.py
tests/document/tabs/: test_document_draw.py  test_document_insert.py  test_document_layout.py  test_document_links.py  test_document_main.py  test_document_review.py  test_document_view.py
tests/presentation/tabs/: test_presentation_draw.py  test_presentation_insert.py  test_presentation_main.py  test_presentation_review.py  test_presentation_view.py
tests/spreadsheet/tabs/: test_spreadsheet_data.py  test_spreadsheet_draw.py  test_spreadsheet_formula.py  test_spreadsheet_insert.py  test_spreadsheet_layout.py  test_spreadsheet_main.py  test_spreadsheet_pivot_table.py  test_spreadsheet_review.py  test_spreadsheet_view.py
utils/: diagram.py  editors.conf  keyboard_layout.py  license.lickey  os_platform.py  report_generator.py  screenshot_comparsion.py
utils/linux_setup/: alt_linux_altinstall_python313.sh  rosa_linux_altinstall_python313.sh
